--- a/README
+++ b/README
@@ -12,3 +12,12 @@ initial scripts based on https://opensource.com/article/18/3/manage-your-worksta
 >>> sudo ansible-pull -U https://github.com/m8ryx/ansible-desktop.git
 
 
+
+## TODO
+
+Looking to add secrets management via AWS Secrets Manager to manage secure payloads like .aws/credentials, SSH creds, and more
+setup vpn client
+
+
+
+
